--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/file": "^5.27.0",
     "@ionic-native/geolocation": "^5.27.0",
     "@ionic-native/media": "^5.27.0",
+    "@ionic-native/native-audio": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -35,6 +36,7 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.0.2",
     "cordova-plugin-media": "^5.0.3",
+    "cordova-plugin-nativeaudio": "^3.0.9",
     "event-recorder": "0.0.26",
     "file-system": "^2.2.2",
     "firebase": "^7.15.5",
@@ -77,7 +79,8 @@
     "plugins": {
       "cordova-plugin-file": {},
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-media": {}
+      "cordova-plugin-media": {},
+      "cordova-plugin-nativeaudio": {}
     }
   }
 }
