--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -10,7 +10,7 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
-	<key>CFBundleName</key>
+	<key>Shoma - שׁוֹמַעַת® Song Finder Beta</key>
 	<string>Shoma - שׁוֹמַעַת® Song Finder Beta</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
